# take-notes

./: Cargo.toml  README.md  go.mod  go.sum
commands/: create.go
main/: main.go
src/: lib.rs  main.rs  play.rs
src/commands/: mod.rs
src/types/: app_config.rs  mod.rs  note.rs
tools/: file_ops.go
types/: cmd_context.go  note.go
