[package]
name = "take_notes"
version = "0.1.0"
authors = ["Alexander Schenkel <aschenkel@kadenpartner.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = "2.0"
dirs = "3.0"

[[bin]]
name = "tn"
path = "src/main.rs"

[[bin]]
name = "play"
path = "src/play.rs"
